# devboy-tools-agent-usage

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
npm/agent-usage/: index.d.ts  index.js  package.json
npm/agent-usage-darwin-arm64/: package.json
npm/agent-usage-darwin-x64/: package.json
npm/agent-usage-linux-arm64/: package.json
npm/agent-usage-linux-x64/: package.json
npm/agent-usage-win32-x64/: package.json
src/: cli.rs  config.rs  main.rs
src/activity/: classifier.rs  db.rs  mod.rs  models.rs
src/classification/: cache.rs  client.rs  config.rs  mod.rs
src/claude/: mcp_patterns.rs  mod.rs  models.rs  parser.rs  session.rs  tokens.rs
src/correlation/: engine.rs  mod.rs  models.rs  tasks.rs
src/output/: commands.rs  json.rs  mod.rs  table.rs  timeline.rs
